[package]
name = "interbtc-telemetry"
version = "0.3.0"
authors = ["Interlay <contact@interlay.io>"]
edition = "2018"

[[bin]]
name = "http-server"
path = "src/server.rs"

[[bin]]
name = "http-client"
path = "src/client.rs"

[dependencies]
actix-web = "3"
actix-service = "1.0.0"
log = "0.4.6"
env_logger = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.4.2", features = [ "runtime-actix-rustls", "postgres", "sqlite" ] }
thiserror = "1.0"
clap = "3.0.0-beta.2"

sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }

interbtc-telemetry-types = { path = "./types" }

[dev-dependencies]
actix-rt = "1"
rand = "0.8.3"
dotenv = "0.15.0"