[package]
name = "interbtc-telemetry-types"
version = "0.3.0"
authors = ["Interlay <contact@interlay.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }